--- a/packages/package-1/package.json
+++ b/packages/package-1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-1",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0+7942a2e",
   "description": "Now I’m the model of a modern major general / The venerated Virginian veteran whose men are all / Lining up, to put me up on a pedestal / Writin’ letters to relatives / Embellishin’ my elegance and eloquence / But the elephant is in the room / The truth is in ya face when ya hear the British cannons go / BOOM",
   "keywords": [],
   "author": "fperez <fperez>",
@@ -19,5 +19,5 @@
   "dependencies": {
     "package-1": "file:../package-2"
   },
-  "gitHead": "feb95c7f7f16103e377b59d3ffa96967db28aa06"
+  "gitHead": "7942a2efa6cbb29e8ec5b729c069b4dbd4f9410e"
 }
