--- a/packages/package-2/package.json
+++ b/packages/package-2/package.json
@@ -13,8 +13,11 @@
   "files": [
     "lib"
   ],
+  "publishConfig" : {
+    "registry" : "http://localhost:4873" 
+  },
   "scripts": {
     "test": "node ./__tests__/package-2.test.js"
   },
-  "gitHead": "c2ac073f728d62e7d1e96c0e246434d77f0aef19"
+  "gitHead": "61f625de0af04c3efe8d245bfb1d720c46a8e275"
 }
