--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "packages/*"
   ],
   "publishConfig" : {
-    "registry" : "http://localhost:4873/" 
+    "registry" : "http://localhost:4873" 
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
