--- a/packages/package-3/package.json
+++ b/packages/package-3/package.json
@@ -1,6 +1,6 @@
 {
   "name": "package-3",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "> TODO: description",
   "author": "fperez <fperez>",
   "homepage": "https://github.com/facu1995/librery-npm#readme",
