--- a/packages/Label/package.json
+++ b/packages/Label/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infosis/label",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "main": "src/MyLabel.tsx",
   "files": [
     "src"
@@ -10,8 +10,7 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.0",
-    "jest": "^27.0.0"
+    "jest": "^27.0.0",
+    "typescript": "^4.0.0"
   }
 }
-
