--- a/packages/Label2/package.json
+++ b/packages/Label2/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@infosis/label",
-  "version": "1.0.1-alpha.0",
+  "name": "@infosis/label2",
+  "version": "1.0.0",
   "main": "src/MyLabel.tsx",
   "author": "fperez <fperez>",
   "license": "ISC",
