--- a/packages/Label/package.json
+++ b/packages/Label/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@infosis/label",
-  "version": "1.0.1-alpha.0",
+  "version": "1.0.1",
   "main": "src/MyLabel.tsx",
   "author": "fperez <fperez>",
   "license": "ISC",
