--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "workspaces": [
-    "packages/*"
+    "components/*"
   ],
   "publishConfig" : {
     "registry" : "http://localhost:4873" 
