--- a/src/components/Paginator/package.json
+++ b/src/components/Paginator/package.json
@@ -7,6 +7,9 @@
   "files": [
     "./*"
   ],
+  "dependencies": {
+    "@infosis/label": "^1.0.2"
+  },
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
