--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   "dependencies": {
     "@emotion/react": "11.11.0",
     "@emotion/styled": "11.11.0",
+    "@infosis/label": "^1.0.2",
     "@storybook/theming": "7.0.26",
     "@types/jest": "27.5.2",
     "@types/node": "20.2.3",
